fix: change test to create authz after role creation
(cherry picked from commit a2107f2178842b988cc9f8dd691b9a3df23952bc)